# calibrated-judge-model

./: .gitignore  MODEL_CARD.md  main.py  mlflow.db  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
datasets/: train.jsonl  val.jsonl
eval/: seed_human.jsonl
scripts/: benchmark.py  build_pool.py  calibrate.py  check_gpu.py  check_mlflow.py  check_s3.py  check_teacher.py  eval_seed.py  label_pool.py  port_p2_labels.py  preview_chat.py  publish.py  train.py
src/: api.py  config.py  teacher.py  tracking.py
src/data/: schema.py
src/judge/: model.py  prompt.py  task.py
tests/: test_datasets.py  test_prompt.py  test_schema.py  test_seed_data.py  test_task.py  test_teacher.py
