[project]
name = "calibrated-judge-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "judgekit",
    "openai>=2.41.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.uv.sources]
judgekit = { git = "https://github.com/umairrasheed828/judgekit.git" }
torch = [{ index = "pytorch-cu128" }]

[project.optional-dependencies]
gpu = [
    "torch",
    "transformers",
    "datasets",
    "peft",
    "trl",
    "bitsandbytes",
    "accelerate",
    "mlflow",
    "huggingface_hub",
    "boto3>=1.43.24",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.mypy.overrides]]
module = [
    "mlflow", "mlflow.*",
    "torch", "torch.*",
    "transformers", "transformers.*",
    "peft", "peft.*",
]
ignore_missing_imports = true


